Fixed more of the spacing and styling for search results and changed the show episode image to a square.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -171,14 +171,15 @@ body {
 #episode-photo {
   width: 55px;
   height: 55px;
-  margin-top: 10px;
+  margin-top: 15px;
 }
 
 .related-card-title {
   font-size: 12px;
 }
 
-#collapsed-list {
+#row-head {
+  margin-bottom: 0px;
 }
 
 #jquery-jplayer-1 {
